--- a/Writing/Interim_Report/My_Library.bib
+++ b/Writing/Interim_Report/My_Library.bib
@@ -1298,3 +1298,21 @@ This first paper focusses on the systematic modelling and experimental verificat
 	pages = {373--386},
 	file = {ScienceDirect Full Text PDF:/Users/georgekirby/Zotero/storage/VXWUDHV6/Birkl et al. - 2017 - Degradation diagnostics for lithium ion cells.pdf:application/pdf;ScienceDirect Snapshot:/Users/georgekirby/Zotero/storage/J5R999XD/S0378775316316998.html:text/html},
 }
+
+@article{doyle_modeling_1993,
+	title = {Modeling of {Galvanostatic} {Charge} and {Discharge} of the {Lithium}/{Polymer}/{Insertion} {Cell}},
+	volume = {140},
+	issn = {1945-7111},
+	url = {https://iopscience.iop.org/article/10.1149/1.2221597/meta},
+	doi = {10.1149/1.2221597},
+	abstract = {Modeling of Galvanostatic Charge and Discharge of the Lithium/Polymer/Insertion Cell, Doyle, Marc, Fuller, Thomas F., Newman, John},
+	language = {en},
+	number = {6},
+	urldate = {2025-12-03},
+	journal = {Journal of The Electrochemical Society},
+	author = {Doyle, Marc and Fuller, Thomas F. and Newman, John},
+	month = jun,
+	year = {1993},
+	note = {Publisher: IOP Publishing},
+	pages = {1526},
+}
