--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -277,13 +277,14 @@ Choosing this final year project has, and will continue to, be a big personal un
 
 A large amount of time has been spent of narrowing down the focus of the project, as well as preparing the opmitised controll desgins for the lab testing. As of 01/12/2025, the first two batteries are undergoing characterisation tests and the softwear side is nearly done. Focus will now be spent on researching more about the machine learning and ways to optimise charging from the modeling of the battery. 
 
-
+\section{Project Plan}
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1\textwidth]{../Images/Online Gantt 20251129.png}
     \caption{Gannt Chart of current project plan}
 \end{figure}
 
+\section{Risk Register}
 \begin{figure}[htt]
     \centering
     \includegraphics[width=0.7\textwidth]{../Images/rr.png}
