--- a/Writing/Interim_Report/main.tex
+++ b/Writing/Interim_Report/main.tex
@@ -14,7 +14,7 @@
     
     Understanding the problem\\[1cm]
     \includegraphics[width=0.25\textwidth]{../Images/UOS.png}\\[2cm]
-    \textbf{Finding Machine learning methods to model the degredadition of lithium based batteries under multi-stage CC charging } \\[1em]
+    \textbf{Applying Machine learning methods to model the degredadition of lithium based batteries under multi-stage CC charging} \\[1em]
 }
 \author{George W. Kirby \\[2em] \textit{200328186} \\[2em] }
 \date{\today}
@@ -273,7 +273,7 @@ Severson et al. \cite{severson_data-driven_2019}, provides one of the largest av
 \end{figure}
 
 \section{Self Review}
-Choosing this final year project has, and will continue to, be a big personal undertaking. I knew nothing about batteries other than the very basics when starting, I also knew very little within systems \& control other than simple LTI systems. Research has also been a struggle for me as many papers incorperate control methods or electrochemical background of which i dont have, a high amount of papers regarding the use of AI in modeling degredadtion are also behind paywalls - now more than ever on my 5th univerity year do I feel failing may well happen. I understand this document does not have indepth explinations of the use of AI within the modeling and may be vauge in the project steps, the project is very much in the sense adapting to what can be done. Work in general AI was done early in the project, I was able to learn the basics in pure nural-nets and produced a basic image classifer within pytorch but took a pause to work on other aspects of the project and univeristy modules. 
+Choosing this final year project has, and will continue to, be a big personal undertaking. I knew nothing about batteries other than the very basics when starting, I also knew very little within systems \& control other than simple LTI systems. Research has also been a struggle for me as many papers incorperate control methods or electrochemical background of which i dont have, a high amount of papers regarding the use of AI in modeling degredadtion are also behind paywalls. I understand this document does not have indepth explinations of the use of AI within the modeling and may be vauge in the project steps, the project is very much in the sense adapting to what can be done. Work in general AI was done early in the project, I was able to learn the basics in pure nural-nets and produced a basic image classifer within pytorch but took a pause to work on other aspects of the project and univeristy modules. 
 
 A large amount of time has been spent of narrowing down the focus of the project, as well as preparing the opmitised controll desgins for the lab testing. As of 01/12/2025, the first two batteries are undergoing characterisation tests and the softwear side is nearly done. Focus will now be spent on researching more about the machine learning and ways to optimise charging from the modeling of the battery. 
 
