--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -243,6 +243,13 @@ I/C- V_{1}/R_{1}C
 \end{equation} 
 
 
+
+
+
+B01_Charac R0 R1 points : 73400 - 74008, 109263 - 109830, 205449 - 205982, 253250 - 253760
+
+B02_Charac R0 R1 points : 85540 - 85940, 109372 - 109834, 205557 - 205973, 241438 - 241816
+
 \nocite{*}
 \newpage
 \bibliographystyle{../IEEEtran/IEEEtran}
