--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -246,10 +246,11 @@ I/C- V_{1}/R_{1}C
 
 
 
-B01_Charac R0 R1 points : 73400 - 74008, 109263 - 109830, 205449 - 205982, 253250 - 253760
+B01Charac R0 R1 points : 84586 - 84989, 120362 - 120713, 251964 - 252328, 240052 - 240374
 
-B02_Charac R0 R1 points : 85540 - 85940, 109372 - 109834, 205557 - 205973, 241438 - 241816
 
+B02Charac R0 R1 points : 85540 - 85940, 109372 - 109834, 205557 - 205973, 241438 - 241816
+35134
 \nocite{*}
 \newpage
 \bibliographystyle{../IEEEtran/IEEEtran}
