--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -270,7 +270,7 @@ In the second case, supose there is a current profile which is lowest for all $\
 \begin{figure}[ht]
     \centering
     \includegraphics[width=1\textwidth]{../Images/msad.png}
-    \caption{Fixed OCV curve from paper ... }
+    \caption{Ffes }
 \end{figure}
 
 This shows that if the charging duration is increase, it allows for a greater range of the available currents at different SoC ranges which is advantaguous to find the optimal protocols, however this does increase charge time and lab time is of priority given the FYP time. 
@@ -295,7 +295,16 @@ $CC_{1,\text{attia},\max}/CC_{1,\text{rs},\max} \text{ Norm}$ & 3.4 & 2.97 & 2.3
 
 The duration of $t_{0-80\%}$ in Attia is 10 minuets, looking at figure x, this clearley can not be achived, if, the scaling used in table Cs row 2 is used as the upper limits are slightly reduced futher, yeilding ever worse achivability. However by scaling the CC\_max that way, the CC values obtained by Attia can be siply each devided by the same scaling factor (2.35 in this case). This then forces the $t_{0-80\%}$ to be 23.5 minuets. For example, the best CC segments from attia are 5.2C-5.2C-4.8C-4.16C, since the scaling of CC\_max is 2.35, the CC segments for out battery can be 2.2C-2.2C-2C-1.3C at takes 23.5 minuets. This is acceptable, however, 23.5 minuets limits the lower bounds on the CC segments, thus reducing the possible combinations to try optimising. To show this, the dashed lines are added to figure x which use the normalised CC\_max values in table C, and at $t_{0-80\%}$ = 0.39 would give the lower limits of $\mathbf{CC}_{1;3min}$ (2.43C) and $\mathbf{CC}_{4min}$ (2.06C). This is a problem straight away, this gives 0 variance to $\mathbf{CC}_{4}$. This poses a problem in translating the Attia framework, the cycles could be futher reduced in current by a scale factor greater than that which can scale the CC\_max, but these optimum values were obtained with these limits in place. It is therefore a balance between matching the trend of the attia protocols, and current ranges to allow more variation. 
 
-An idea is to subjectivley choose $t_{0-80\%}$ from figure x, and for the attia protocols, scale the $\mathbf{CC}_{1;3}$ segments by a factor which causes $\mathbf{CC}_{1;4}$ to be as close as possible in ratio to that of $CC_{1,\text{attia},\max}/CC_{1,\text{rs},\max}$, the $\mathbf{CC}_{4}$ value is to be calculated inline with methods before and attia - constrained to meet 80\% SoC, in $t_{0-80\%}$ time. This can very simply represented at $t_{0-80\%} = 0.2x() $
+An idea is to subjectivley choose $t_{0-80\%}$ from figure x, and for the attia protocols, scale the $\mathbf{CC}_{1;3}$ segments by a factor which causes $\mathbf{CC}_{1;4}$ to be as close as possible in ratio to that of $CC_{1,\text{attia},\max}/CC_{1,\text{rs},\max}$, the $\mathbf{CC}_{4}$ value is to be calculated inline with methods before and attia - constrained to meet 80\% SoC, in $t_{0-80\%}$ time. This can very simply represented at $t_{0-80\%} = 0.2/x_{scale}\times(\left( \sum_{i=1}^{3}\mathbf{CC}_{i}^{-1} \right) + \mathbf{CC}_{4}^{-1})$, which can be written in a graphical form as $$\mathbf{CC}_{4} = 0.2 / (x_{scale}t_{0-80\%} - 0.2\left( \sum_{i=1}^{3}\mathbf{CC}_{i}^{-1} \right))$$. The right hand side can be plotted and yeilds the following (Y value is $t_{0-80\%}$), the optimised choice is such that the scalar value in the feild is as close to $\mathbf{CC}_{4}$ of the chosen Attia profile (the most optimal version they found for example), so $\mathbf{CC}_{4} = 4.16$ in the chosen protocol, alongside the respective $\mathbf{CC}_{1;3}$ values, the point which is scaled given in the previous pharagraph is shown in red, but as mentioned it limits the potential currents for more optimisations and is too short of a charge time. The point decided keeps the scaling of  $\mathbf{CC}_{4}$ almost identical to that of the other segments, thus keeping the pattern correct, whilst choosing a scaling factor as close as possible to that in the previous pharagraph without been to short of charging. A balance was thus decided, with a $t_{0-80\%}$ of 0.55 chosen, this, refering back to the previous graph still allows for a large range of current choices with a low enough C\_min set of values. Thus, for the Attia optimal protocol, the CC values are \textbf{1.73-1.73-1.6-1.39}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\textwidth]{../../Matlab/Learning/Dans_Data_Extraction/Lab_cycles/Scaling found.png}
+    \caption{Ffes }
+\end{figure}
+
+Lastly the final CV section is to be chosen, this could have been scaled with more reasoning, but
+
 
 \nocite{*}
 \newpage
