--- a/Matlab/Learning/FastCharge_Multiphase_ConstantCurrent/Notes/Attia_Protocol/main.tex
+++ b/Matlab/Learning/FastCharge_Multiphase_ConstantCurrent/Notes/Attia_Protocol/main.tex
@@ -32,6 +32,8 @@
 \subsection{Normalising attia current profile}
 http://www.ee.ic.ac.uk/ICLOCS/GetStartedProblemMultiPhase.html Multiphase allows for automating the issue of having the different steps in terms of SoC, that are not corresponding to equal time steps. The connections between each phase are made by setting the linkage constraints.
 
+
+Well whats good is i think ive realised that since the chances are at even0\% 
 \nocite{*}
 \newpage
 
