--- a/Writing/Final_Report/main.tex
+++ b/Writing/Final_Report/main.tex
@@ -275,7 +275,8 @@ Severson et al. \cite{severson_data-driven_2019}, provides one of the largest av
 \section{Methodology}
 \subsection{Thermal Modeling}
 It's most common to considder the 1d Lumped thermal model of small batteries, such as 18650's. Tucker shows that using this apprach, yeilds a charge profile close to that of the optimum profile found from Attia, its thought that if this model could somehow be improved
-
+\subsection{Bayesian Optimization}
+As this project aims to find the optimal charging profile for degredation, 
 
 
 \section{Self Review}
