--- a/Python_Scripts/classes.ipynb
+++ b/Python_Scripts/classes.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "cff721bf",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,17 @@
     "\n",
     "me = well_hello()\n",
     "me()\n",
-    "torch.nn.Linear(in_features=5, out_features=3)"
+    "torch.nn.Linear(in_features=5, out_features=3)\n",
+    "\n",
+    "class me:\n",
+    "    def __init__(self, name: str, age: int):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"My name is {self.name} and I am {self.age} years old.\"\n",
+    "    \n",
+    "person = me(\"George\", 21)"
    ]
   }
  ],
