--- a/Writing/Notes_Learning/main.tex
+++ b/Writing/Notes_Learning/main.tex
@@ -312,6 +312,10 @@ An idea is to subjectivley choose $t_{0-80\%}$ from figure x, and for the attia 
 Lastly the final CV section is to be chosen, this could have been scaled with more reasoning, but for now a value of 0.5C (half of the Attia value was chosen for now to balance total charge duration and the scaling of the previous segments), Attia value was fixed to 1C.
 
 
+\section{Iclocs Optyimisation}
+
+Found an example (Excample Windshear), which also tries to minimise a upper/lower bound on a state (yay!), using this approach in order to minimise the maxiumum temperature during the charge. 
+
 
 
 \nocite{*}
