--- a/Python_Scripts/ite.ipynb
+++ b/Python_Scripts/ite.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "73effbb1",
    "metadata": {},
    "outputs": [],
@@ -14,28 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "22294ab2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = {\"Name\": 3, \"Age\": 4, \"City\": 5, \"Country\": 6, \"Occupation\": 7}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "efbe5c2c",
    "metadata": {},
    "outputs": [],
@@ -57,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "a8b52f01",
    "metadata": {},
    "outputs": [],
@@ -67,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "43267df8",
    "metadata": {},
    "outputs": [
@@ -75,8 +64,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: ('City', 'Country') \n",
-      "Label: tensor([5, 6])\n"
+      "Name: ('City', 'Age') \n",
+      "Label: tensor([5, 4])\n"
      ]
     }
    ],
@@ -87,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "17aefeaf",
    "metadata": {},
    "outputs": [
@@ -95,24 +84,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using mps device\n"
+      "Using cpu device\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "torch.device"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "davice = torch.accelerator.current_accelerator().type if torch.accelerator.is_available() else \"cpu\"\n",
     "print(f\"Using {davice} device\")\n",
-    "\n",
+    "if torch.cuda.is_available() is True:\n",
+    "    print(f\"GPU Name: {torch.cuda.get_device_name(0)}\")\n",
     "class Net(torch.nn.Module):\n",
     "    def __init(self):\n",
     "        super().__init__()\n",
@@ -162,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
