--- a/Python_Scripts/Relearn.ipynb
+++ b/Python_Scripts/Relearn.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 147,
    "id": "f71c769e",
    "metadata": {},
    "outputs": [
@@ -60,30 +60,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.8508, 0.3557, 0.2352,  ..., 0.0221, 0.5351, 0.5564],\n",
-      "        [0.2727, 0.8731, 0.2877,  ..., 0.3797, 0.4045, 0.2931],\n",
-      "        [0.4595, 0.2780, 0.9547,  ..., 0.2495, 0.5288, 0.0181],\n",
-      "        ...,\n",
-      "        [0.1653, 0.4868, 0.9129,  ..., 0.5585, 0.1435, 0.8117],\n",
-      "        [0.3967, 0.1609, 0.7990,  ..., 0.8460, 0.7717, 0.5603],\n",
-      "        [0.8152, 0.5165, 0.0180,  ..., 0.3378, 0.7062, 0.0108]])\n",
-      "Tensor shape: torch.Size([20000, 40000])\n",
+      "tensor([[0.3547, 0.8263, 0.5179, 0.0105],\n",
+      "        [0.5287, 0.5880, 0.4347, 0.1857]])\n",
+      "Tensor shape: torch.Size([2, 4])\n",
       "Tensor dtype: torch.float32\n",
       "Tensor device: cpu\n",
-      "Tensor shape: torch.Size([20000, 40000])\n",
+      "Tensor shape: torch.Size([2, 4])\n",
       "Tensor dtype: torch.float32\n",
       "Tensor device: mps:0\n"
      ]
     }
    ],
    "source": [
-    "shape = (20000,40000)\n",
+    "shape = (2,4)\n",
     "rand_tensor = torch.rand(shape)\n",
     "print(rand_tensor)\n",
     "tensor_info(rand_tensor)\n",
     "if torch.accelerator.is_available():\n",
     "    rand_tensor = rand_tensor.to(torch.accelerator.current_accelerator())\n",
     "tensor_info(rand_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "fef88056",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.]])\n",
+      "tensor([[1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexing = torch.ones(5,2)\n",
+    "print(indexing[:1])\n",
+    "print(torch.cat([indexing, indexing], dim=1))"
    ]
   },
   {
@@ -117,6 +137,38 @@
     "    print(f\"Inside with block, value: {val}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "b7d70ca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tensor shape: torch.Size([3, 1154, 1763])\n",
+      "Tensor dtype: torch.float32\n",
+      "Tensor device: cpu\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PIL import Image\n",
+    "import torchvision.transforms as transforms\n",
+    "img = Image.open(\"../Matlab/Figures/LG_Sample_OCV.png\")\n",
+    "myimg = transforms.ToTensor()(img)\n",
+    "tensor_info(myimg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a48bcf0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
