--- a/Python_Scripts/classes.ipynb
+++ b/Python_Scripts/classes.ipynb
@@ -16,6 +16,74 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "d3a1c59a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import smbclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2553399f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smbclient.register_session(r\"192.168.1.201\", username=\"media\", password=\"WonderW2003-23+*\")\n",
+    "lists = smbclient.listdir(r\"\\\\192.168.1.201\\Media\\Movs\\FYP\\BatteryLife_Processed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c413ca2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Tongji',\n",
+       " '.gitattributes',\n",
+       " 'MICH_EXP',\n",
+       " 'NA-ion',\n",
+       " 'ISU_ILCC',\n",
+       " '._.DS_Store',\n",
+       " 'HNEI',\n",
+       " 'CALCE',\n",
+       " 'ZN-coin',\n",
+       " 'Stanford_2',\n",
+       " 'UL_PUR',\n",
+       " '.git',\n",
+       " 'SNL',\n",
+       " '._README.md',\n",
+       " 'CALB',\n",
+       " 'Life labels',\n",
+       " 'RWTH',\n",
+       " 'Stanford_2_labels.json',\n",
+       " '.DS_Store',\n",
+       " 'Stanford',\n",
+       " 'MICH',\n",
+       " 'MATR',\n",
+       " 'HUST',\n",
+       " 'READMEs',\n",
+       " 'SDU',\n",
+       " 'XJTU']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dirs = [x for x in lists if x != \"README.md\"]\n",
+    "dirs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "0c2005dc",
    "metadata": {},
