--- a/Python_Scripts/Relearn.ipynb
+++ b/Python_Scripts/Relearn.ipynb
@@ -164,11 +164,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1a48bcf0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before calling my_decorated_func\n",
+      "After calling my_decorated_func, result: 27\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def my_func(x):\n",
+    "    return x**2\n",
+    "\n",
+    "def wrapper(func):\n",
+    "    def inner(x):\n",
+    "        print(f\"Before calling {func.__name__}\")\n",
+    "        result = func(x)\n",
+    "        print(f\"After calling {func.__name__}, result: {result}\")\n",
+    "        return result\n",
+    "    return inner\n",
+    "wrapped_func = wrapper(my_func)\n",
+    "# wrapped_func(5)\n",
+    "\n",
+    "@wrapper\n",
+    "def my_decorated_func(x):\n",
+    "    return x**3\n",
+    "\n",
+    "my_decorated_func(3)\n"
+   ]
   }
  ],
  "metadata": {
@@ -187,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
