--- a/Python_Scripts/classes.ipynb
+++ b/Python_Scripts/classes.ipynb
@@ -16,6 +16,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a7e0e5d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d3a1c59a",
    "metadata": {},
@@ -26,12 +34,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "2553399f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "smbclient.register_session(r\"192.168.1.201\", username=\"media\", password=\"WonderW2003-23+*\")\n",
+    "smbclient.register_session(r\"192.168.1.201\", username=\"media\", password=\"media123\")\n",
     "lists = smbclient.listdir(r\"\\\\192.168.1.201\\Media\\Movs\\FYP\\BatteryLife_Processed\")"
    ]
   },
